<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
<RelativeLayout

    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="40dp"
    android:paddingRight="16dp"
    android:paddingBottom="1dp"
    android:weightSum="100">

    <TextView
        android:id="@+id/textView0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-medium"
        android:paddingBottom="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/details"
        android:textColor="#0C327C"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textView0"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/first_name"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:ems="14"
        android:paddingLeft="5dp"
        android:textColor="@color/black"
        android:background="@layout/edittextbackground"
        android:inputType="textCapCharacters" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/name_text"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/last_name"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/surname_text"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@layout/edittextbackground"
        android:ems="14"
        android:paddingLeft="5dp"
        android:textColor="@color/black"
        android:inputType="textCapCharacters"  />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/surname_text"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/road"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/route_text"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@layout/edittextbackground"
        android:ems="14"
        android:paddingLeft="5dp"
        android:textColor="@color/black"
        android:inputType="textCapCharacters"  />
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/route_text"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/number"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/number_text"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_below="@+id/textView4"
        android:paddingLeft="5dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@layout/edittextbackground"
        android:ems="14"
        android:textColor="@color/black"
        android:inputType="number"/>
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/number_text"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/region"
        android:textColor="@color/black"
        android:hint=""
        android:textSize="18sp" />

    <EditText
        android:id="@+id/region_text"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:paddingLeft="5dp"
        android:background="@layout/edittextbackground"
        android:ems="14"
        android:textColor="@color/black"
        android:inputType="textCapCharacters" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/region_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:onClick="getdata"
        android:textColor="@color/white"
        android:text="@string/button"
        android:backgroundTint="#0C327C" />
</RelativeLayout>
</ScrollView>